clash-brush-parser/src/snapshots/clash_brush_parser__word__tests__brace_expansion_parsing.snap
---
source: clash-brush-parser/src/word.rs
assertion_line: 1336
expression: "super::parse_brace_expansions(input,\n&options)?.ok_or_else(||\nanyhow::anyhow!(\"Expected brace expansion to be parsed successfully\"))?"
---
[
  Text("x"),
  Expr([
    Child([
      Text("a"),
    ]),
    Child([
      Text("b"),
    ]),
  ]),
  Text("y"),
]
