clash-brush-parser/src/snapshots/clash_brush_parser__word__tests__parse_ansi_c_quoted_escape_seq.snap
---
source: clash-brush-parser/src/word.rs
assertion_line: 1201
expression: "test_parse(r\"$'\\\\'\")?"
---
ParseTestResults(
  input: "$\'\\\\\'",
  result: [
    WordPieceWithSource(
      piece: AnsiCQuotedText("\\\\"),
      start_index: 0,
      end_index: 5,
    ),
  ],
)
