clash-brush-parser/src/snapshots/clash_brush_parser__word__tests__parse_ansi_c_quoted_text.snap
---
source: clash-brush-parser/src/word.rs
assertion_line: 1195
expression: "test_parse(r\"$'hi\\nthere\\t'\")?"
---
ParseTestResults(
  input: "$\'hi\\nthere\\t\'",
  result: [
    WordPieceWithSource(
      piece: AnsiCQuotedText("hi\\nthere\\t"),
      start_index: 0,
      end_index: 14,
    ),
  ],
)
