clash-brush-parser/src/snapshots/clash_brush_parser__word__tests__parse_arithmetic_expansion_with_parens.snap
---
source: clash-brush-parser/src/word.rs
assertion_line: 1292
expression: "test_parse(\"$((((1+2)*3)))\")?"
---
ParseTestResults(
  input: "$((((1+2)*3)))",
  result: [
    WordPieceWithSource(
      piece: ArithmeticExpression(UnexpandedArithmeticExpr(
        value: "((1+2)*3)",
      )),
      start_index: 0,
      end_index: 14,
    ),
  ],
)
