clash-brush-parser/src/snapshots/clash_brush_parser__word__tests__parse_backquoted_command.snap
---
source: clash-brush-parser/src/word.rs
assertion_line: 1268
expression: "test_parse(\"`echo hi`\")?"
---
ParseTestResults(
  input: "`echo hi`",
  result: [
    WordPieceWithSource(
      piece: BackquotedCommandSubstitution("echo hi"),
      start_index: 0,
      end_index: 9,
    ),
  ],
)
