clash-brush-parser/src/snapshots/clash_brush_parser__word__tests__parse_command_substitution.snap
---
source: clash-brush-parser/src/word.rs
assertion_line: 1241
expression: "test_parse(\"$(echo hi)\")?"
---
ParseTestResults(
  input: "$(echo hi)",
  result: [
    WordPieceWithSource(
      piece: CommandSubstitution("echo hi"),
      start_index: 0,
      end_index: 10,
    ),
  ],
)
