clash-brush-parser/src/snapshots/clash_brush_parser__word__tests__parse_command_substitution_with_embedded_extglob.snap
---
source: clash-brush-parser/src/word.rs
assertion_line: 1262
expression: "test_parse(\"$(echo !(x))\")?"
---
ParseTestResults(
  input: "$(echo !(x))",
  result: [
    WordPieceWithSource(
      piece: CommandSubstitution("echo !(x)"),
      start_index: 0,
      end_index: 12,
    ),
  ],
)
